--- a/src/app/demo/view/documentation.html
+++ b/src/app/demo/view/documentation.html
@@ -437,6 +437,11 @@ $dataTableRowBgColorEven:#f4f4f4;
                 
             <h1>Migration Guide</h1>
             
+            <p>1.0.1 to 1.0.2</p>
+            <ul>
+                <li>Update theme-*.css files.</li>
+            </ul>
+            
             <p>1.0.0 to 1.0.1</p>
             <ul>
                 <li>Update layout-*.css files.</li>
