--- a/src/app/demo/view/sampledemo.html
+++ b/src/app/demo/view/sampledemo.html
@@ -38,7 +38,7 @@
                         <label for="dropdown">Dropdown</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
-                        <p-dropdown id="dropdown" [options]="cities" [(ngModel)]="selectedCity1" [autoWidth]="false"></p-dropdown>
+                        <p-dropdown id="dropdown" [options]="cities1" [(ngModel)]="selectedCity1" [autoWidth]="false"></p-dropdown>
                     </div>
                     <div class="ui-g-12 ui-md-2">
                         <label for="password">Password</label>
@@ -124,7 +124,7 @@
                         <label for="listbox">Listbox</label>
                     </div>
                     <div class="ui-g-12 ui-md-4">
-                        <p-listbox [options]="cities" [(ngModel)]="selectedCity2"></p-listbox>
+                        <p-listbox [options]="cities2" [(ngModel)]="selectedCity2"></p-listbox>
                     </div>
                     <div class="ui-g-12 ui-md-2">
                         Dialog
@@ -151,7 +151,7 @@
                     </div>
                     
                     <footer>
-                        <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
+                        <div class="ui-dialog-buttonpane ui-helper-clearfix">
                             <button type="button" label="Login" icon="ui-icon-person" (click)="dialogVisible=false" pButton></button>
                         </div>
                     </footer>
