--- a/src/app/demo/view/documentation.html
+++ b/src/app/demo/view/documentation.html
@@ -436,6 +436,11 @@ $dataTableRowBgColorEven:#f4f4f4;
             </ul>
                 
             <h1>Migration Guide</h1>
+            <p>4.0 to 4.0.1</p>
+            <ul>
+                <li>Update theme css files.</li>
+            </ul>
+            
             <p>1.0.2 to 4.0</p>
             <ul>
                 <li>Includes version updates to PrimeNG 4 and Angular 4.</li>
