--- a/src/app/demo/view/sampledemo.html
+++ b/src/app/demo/view/sampledemo.html
@@ -150,11 +150,11 @@
                         </div>
                     </div>
                     
-                    <footer>
+                    <p-footer>
                         <div class="ui-dialog-buttonpane ui-helper-clearfix">
                             <button type="button" label="Login" icon="ui-icon-person" (click)="dialogVisible=false" pButton></button>
                         </div>
-                    </footer>
+                    </p-footer>
                 </p-dialog>
             </div>
             
