panelmenu panels margin added

--- a/src/assets/sass/theme/_menu.scss
+++ b/src/assets/sass/theme/_menu.scss
@@ -321,6 +321,10 @@ body {
             }
         }
         
+        .ui-panelmenu-panel {
+            margin-bottom: 1px;
+        }
+        
         .ui-panelmenu-content {
             padding: 0;
             
