galleria icon alignment

--- a/src/assets/sass/theme/_misc.scss
+++ b/src/assets/sass/theme/_misc.scss
@@ -27,10 +27,12 @@ body {
     .ui-galleria {
         .ui-galleria-nav-prev {
             left: 0;
+            margin-bottom: -.4em;
         }
         
         .ui-galleria-nav-next {
             right: 0;
+            margin-bottom: -.4em;
         }
     }
     
