--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -235,6 +235,15 @@
                                     }
                                 }
                                 
+                                &.red-badge {
+                                    > a {
+                                        .menuitem-badge {
+                                            background-color: #F44336;
+                                            color: #ffffff;
+                                        }
+                                    }
+                                }
+                                
                                 ul {
                                     margin: 0;
                                     padding: 0;
@@ -297,6 +306,23 @@
                                         }
                                     }
                                 }
+                            }
+                            
+                            .menuitem-badge {
+                                position: absolute;
+                                right: 40px;
+                                top: 10px;
+                                display: inline-block;
+                                width: 16px;
+                                height: 16px;
+                                margin-right: 6px;
+                                text-align: center;
+                                background-color: $accentColor;
+                                color: $accentTextColor;
+                                font-size: $fontSize - 2;
+                                font-weight: 700;
+                                line-height: 16px;
+                                @include border-radius(50%);
                             }
                         }
                     }
