--- a/src/assets/sass/theme/_data.scss
+++ b/src/assets/sass/theme/_data.scss
@@ -113,6 +113,47 @@ body {
         }
     }
     
+    .ui-organizationchart {
+        .ui-organizationchart-node-content {
+            &.ui-organizationchart-selectable-node:not(.ui-state-highlight):hover {
+                @include hover-element();
+            }
+        }
+        .ui-organizationchart-line-down {
+            background-color: darken($contentBorderColor, 10%);
+        }
+        
+        .ui-organizationchart-line-left {
+            border-right: 1px solid darken($contentBorderColor, 10%);
+        }
+        
+        .ui-organizationchart-line-right {
+            
+        }
+        
+        .ui-organizationchart-line-top {
+            border-top: 1px solid darken($contentBorderColor, 10%);
+        }
+        
+        .ui-organizationchart-node-content {
+            border-color: darken($contentBorderColor, 10%);
+        }
+        
+        .ui-organizationchart-node-content .ui-node-toggler {
+            bottom: -1.143em;
+            margin-left: -.786em;
+            color: darken($contentBorderColor, 10%);
+            
+            .fa-chevron-down {
+                @include material-icon("keyboard_arrow_down");
+            }
+            
+            .fa-chevron-up {
+                @include material-icon("keyboard_arrow_up");
+            }
+        }
+    }
+    
     .ui-paginator {
         background-color: $primaryDarkColor;
         padding: $headerPadding;
