--- a/src/app/demo/view/documentation.html
+++ b/src/app/demo/view/documentation.html
@@ -397,7 +397,16 @@ $checkboxBorderColor:#757575;
 $dataTableBorderColor:#cacaca;
 $dataTableRowBgColorEven:#f4f4f4;
 </pre>        
-
+            <h1>Menu Item Badges</h1>
+            <p>Badges are numerical indicators of how many items are associated with a link.
+               The badge property is value of the badge and badgeStyleClass is style class of the badge.</p>
+<pre>
+label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
+</pre>  
+            <p>Barcelona layout has 2 different badge style.There is a default badge which uses the accent color of Barcelona layout. And there is 1 other badge class for menu items.</p>
+            <ul>
+                <li>red-badge</li>
+            </ul>
                                     
             <h1>Menu Modes</h1>
             <p>Menu has 2 modes, static and overlay. Layout container element in application.html is used to define which mode to use by adding specific classes. List
@@ -436,6 +445,14 @@ $dataTableRowBgColorEven:#f4f4f4;
             </ul>
                 
             <h1>Migration Guide</h1>
+            <p>4.0.1 to 4.1.0</p>
+            <ul>
+                <li>Update layout css files.</li>
+                <li>Update theme css files.</li>
+                <li>Update AppSubmenu component in app.menu.component.ts for menu item badges.</li>
+                <li>Update AppSubmenu component in app.menu.component.ts by replacing the itemClick method implementation.</li>
+            </ul>
+            
             <p>4.0 to 4.0.1</p>
             <ul>
                 <li>Update theme css files.</li>
