--- a/src/assets/sass/theme/_overlay.scss
+++ b/src/assets/sass/theme/_overlay.scss
@@ -51,6 +51,8 @@ body {
         
         .ui-dialog-buttonpane, .ui-dialog-footer {
             text-align: right;
+            border: 0 none;
+            border-top: 1px solid $contentBorderColor;
             
             .ui-button {
                 background-color: #ffffff;
