--- a/src/assets/sass/theme/_overlay.scss
+++ b/src/assets/sass/theme/_overlay.scss
@@ -49,7 +49,7 @@ body {
             padding: $contentPadding;
         }
         
-        .ui-dialog-buttonpane, .ui-dialog-footer {
+        .ui-dialog-footer {
             text-align: right;
             border: 0 none;
             border-top: 1px solid $contentBorderColor;
