--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -499,6 +499,7 @@ body {
                 transition: transform ease .28s;
                 -webkit-transform: scale(0);
                 transform: scale(0);
+                margin: 0
             }
             
             .fa-circle {
