Fixed spinner hover-active

--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -867,7 +867,7 @@ body {
 
             &:enabled:hover,
             &:active {
-                background-color: #ffffff;
+                background-color: transparent;
             }
         }
         
