--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -1262,6 +1262,18 @@ body {
         }
     }
     
+    .ui-fileupload-choose {
+        &.ui-button {
+            &:not(.ui-state-disabled):hover {
+                background-color: darken($accentColor, 5%);
+            }
+            
+            &:not(.ui-state-disabled):active {
+                background-color: darken($accentColor, 10%);
+            }
+        }
+    }
+    
     .ui-editor-container {
         .ui-editor-toolbar {
             background-color: #e8e8e8;
