--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -1262,15 +1262,16 @@ body {
         }
     }
     
-    .ui-fileupload-choose {
+    .ui-fileupload-choose:not(.ui-state-disabled):hover,
+    .ui-fileupload-choose.ui-state-focus {
         &.ui-button {
-            &:not(.ui-state-disabled):hover {
-                background-color: darken($accentColor, 5%);
-            }
-            
-            &:not(.ui-state-disabled):active {
-                background-color: darken($accentColor, 10%);
-            }
+            background-color: darken($accentColor, 5%);
+        }
+    }
+    
+    .ui-fileupload-choose:not(.ui-state-disabled):active {
+        &.ui-button {
+            background-color: darken($accentColor, 10%);
         }
     }
     
