--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -41,6 +41,7 @@ $inputOptionFontSize:1em;
 $inputHeaderPadding:.625em 1em;
 $invalidInputLabelColor:#e62a10;
 $invalidInputBorderColor:#e62a10;
+$inputGroupAddonBgColor:#e6e6e6;
 
 $buttonFontSize:1em;
 
