--- a/src/assets/sass/layout/_splash.scss
+++ b/src/assets/sass/layout/_splash.scss
@@ -2,6 +2,7 @@
     background: #1F796D;
     width: 100%;
     height: 100%;
+    position: fixed;
     
     .splash-loader {
         position: absolute;
