--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -447,6 +447,11 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <h1>Migration Guide</h1>
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
+            
+            <p>4.1.0 to 4.2.0</p>
+            <ul>
+                <li>Update theme css files.</li>
+            </ul>
 
             <p>4.0.1 to 4.1.0</p>
             <ul>
