support for textboxes

--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -386,6 +386,7 @@ $inputOptionFontSize:1em;
 $inputHeaderPadding:.625em 1em;
 $invalidInputLabelColor:#e62a10;
 $invalidInputBorderColor:#e62a10;
+$textboxBgColor:#f7f7f7;
 
 $buttonFontSize:1em;
 
