--- a/src/app/demo/view/formsdemo.component.html
+++ b/src/app/demo/view/formsdemo.component.html
@@ -27,9 +27,9 @@
                 </div>
                 <div class="ui-g-12 ui-md-4">
                     <span class="md-inputfield">
-                        <input type="text" pInputText class="ng-dirty ng-invalid" placeholder="Invalid" readonly="readonly">
+                        <input type="text" pInputText class="ng-dirty ng-invalid" placeholder="Invalid">
                         <div class="ui-message ui-messages-error ui-corner-all">
-                            This field is invalid
+                            This field is required
                         </div>
                     </span>
                 </div>
@@ -37,6 +37,50 @@
                     <input type="text" pInputText>
                 </div>
             </div>
+            
+            <h1>Filled InputText</h1>
+            <div class="ui-g form-group">
+                <div class="ui-g-12 ui-md-4">
+                    <span class="md-inputfield md-inputfield-fill">
+                        <input type="text" pInputText>
+                        <label>Name</label>
+                    </span>
+                </div>
+                <div class="ui-g-12 ui-md-4">
+                    <span class="md-inputfield md-inputfield-fill">
+                        <input type="text" pInputText>
+                        <label>Email</label>
+                    </span>
+                </div>
+                <div class="ui-g-12 ui-md-4">
+                    <span class="md-inputfield md-inputfield-fill">
+                        <input type="text" pInputText>
+                        <label>Phone</label>
+                    </span>
+                </div>
+            </div>
+            
+            <h1>TextBox</h1>
+            <div class="ui-g form-group">
+                <div class="ui-g-12 ui-md-4">
+                    <span class="md-inputfield md-inputfield-box">
+                        <input type="text" pInputText>
+                        <label>Name</label>
+                    </span>
+                </div>
+                <div class="ui-g-12 ui-md-4">
+                    <span class="md-inputfield md-inputfield-box">
+                        <input type="text" pInputText>
+                        <label>Email</label>
+                    </span>
+                </div>
+                <div class="ui-g-12 ui-md-4">
+                    <span class="md-inputfield md-inputfield-box">
+                        <input type="text" pInputText>
+                        <label>Phone</label>
+                    </span>
+                </div>
+            </div>            
         </div>
 
         <div class="card card-w-title">
