--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -42,6 +42,7 @@ $inputHeaderPadding:.625em 1em;
 $invalidInputLabelColor:#e62a10;
 $invalidInputBorderColor:#e62a10;
 $inputGroupAddonBgColor:#e6e6e6;
+$textboxBgColor:#f7f7f7;
 
 $buttonFontSize:1em;
 
