--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -1,50 +1,50 @@
 body {
     .ui-inputtext {
         background: transparent;
-        border-width: 0 0 1px 0;  
+        border-width: 0 0 1px 0;
         padding: 2px 2px 1px 2px;
         font-size: $inputFontSize;
         border-color: $inputBorderColor;
         border-style: solid;
         @include transition(border-color .3s);
         @include border-radius(0px);
-        
+
         &:focus,
         &.ui-state-focus {
             border-width: 0 0 2px 0;
-            border-color: $primaryColor;  
+            border-color: $primaryColor;
             padding-bottom: 0px;
         }
-        
+
         &:disabled {
             border-bottom: 1px dotted;
         }
-        
+
         &.ui-widget-content {
             border-width: 1px;
         }
-        
+
         &.ui-state-error {
-            border-color: $invalidInputBorderColor;  
+            border-color: $invalidInputBorderColor;
         }
     }
-    
+
     .md-inputfield {
         display: block;
-        position:relative; 
-        
+        position:relative;
+
         label {
-          color:#999; 
+          color:#999;
           font-weight:normal;
           position:absolute;
           pointer-events:none;
           left:5px;
           top:1px;
-          transition: 0.3s ease all; 
-          -moz-transition: 0.3s ease all; 
+          transition: 0.3s ease all;
+          -moz-transition: 0.3s ease all;
           -webkit-transition: 0.3s ease all;
         }
-        
+
         input:focus ~ label,
         input.ui-state-filled ~ label,
         .ui-inputwrapper-focus ~ label,
@@ -63,7 +63,7 @@ body {
         input.ng-dirty.ng-invalid ~ label {
             color: $invalidInputLabelColor;
         }
-        
+
         .ui-message {
             &.ui-messages-error {
                 background-color: transparent;
@@ -73,7 +73,7 @@ body {
                 font-size: .75em;
             }
         }
-        
+
         &.md-inputfield-fill {
             input {
                 background-color: $textboxBgColor;
@@ -81,12 +81,12 @@ body {
                 padding-right: 4px;
                 padding-top: 4px;
             }
-            
+
             label {
                 top: 2px;
             }
         }
-        
+
         &.md-inputfield-box {
             input {
                 background-color: $textboxBgColor;
@@ -94,11 +94,11 @@ body {
                 padding-right: 4px;
                 padding-top: 24px;
             }
-            
+
             label {
                 top: 23px;
             }
-            
+
             input:focus ~ label,
             input.ui-state-filled ~ label,
             .ui-inputwrapper-focus ~ label,
@@ -479,12 +479,13 @@ body {
             border: 2px solid $checkboxBorderColor;
             width: 1.25em;
             height: 1.25em;
+            overflow: hidden;
             @include transition(background-color .3s);
 
             .ui-chkbox-icon {
                 font-size: 1.25em;
                 margin-left: -2px;
-                margin-top: -1px;
+                margin-top: -2px;
             }
 
             &.ui-state-active {
@@ -1142,7 +1143,7 @@ body {
                     a {
                         color: #ffffff;
                         background: lighten($primaryColor,20%);
-                        
+
                         &.ui-state-active {
                             color: #ffffff;
                             background-color: $accentColor;
@@ -1150,7 +1151,7 @@ body {
                         }
                     }
                 }
-                
+
                 a {
                     padding: .25em;
                     margin: 0;
@@ -1161,7 +1162,7 @@ body {
                     width: 2.250em;
                     @include border-radius(50%);
                     line-height: 1.8em;
-                                        
+
                     &.ui-state-active {
                         color: #ffffff;
                         background-color: $accentColor;
@@ -1171,13 +1172,13 @@ body {
                     &:not(.ui-state-active):not(.ui-state-highlight):hover {
                         @include hover-element();
                     }
-                    
+
                     span {
                         display: inline;
                         padding: 0;
                         text-align: center;
                     }
-                }                
+                }
             }
         }
 
