--- a/src/app/demo/view/formsdemo.component.html
+++ b/src/app/demo/view/formsdemo.component.html
@@ -211,38 +211,50 @@
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>Input Groups</h1>
-
+            
             <div class="ui-g form-group">
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="material-icons">person</i></span>
-                        <input type="text" pInputText placeholder="Username">
+                        <span class="ui-inputgroup-addon"><i class="material-icons">account_circle</i></span>
+                        <span class="md-inputfield">
+                            <input type="text" pInputText> 
+                            <label>Username</label>        
+                        </span>
                     </div>
                 </div>
-
+                
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="material-icons">credit_card</i></span>
-                        <span class="ui-inputgroup-addon"><i class="material-icons">card_travel</i></span>
-                        <input type="text" pInputText placeholder="Price">
-                        <span class="ui-inputgroup-addon">$</span>
-                        <span class="ui-inputgroup-addon">.00</span>
+                        <span class="ui-inputgroup-addon"><i class="material-icons">credit_card</i></span>  
+                        <span class="ui-inputgroup-addon"><i class="material-icons">card_travel</i></span>   
+                        <span class="md-inputfield">
+                            <input type="text" pInputText> 
+                            <label>Price</label>        
+                        </span>
+                        <span class="ui-inputgroup-addon">$</span>  
+                        <span class="ui-inputgroup-addon">.00</span>      
                     </div>
                 </div>
-
+                            
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
-                        <button pButton type="button" label="Search"></button>
-                        <input type="text" pInputText placeholder="Keyword">
+                        <span class="md-inputfield">
+                            <input type="text" pInputText> 
+                            <label>Keyword</label>        
+                        </span>
+                        <button pButton type="button" icon="ui-icon-search"></button>      
                     </div>
                 </div>
-
+                
                 <div class="ui-g-12 ui-md-6">
                     <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon ui-inputgroup-addon-checkbox"><p-checkbox></p-checkbox></span>
-                        <input type="text" pInputText placeholder="Username">
+                        <span class="ui-inputgroup-addon"><p-checkbox></p-checkbox></span>
+                        <span class="md-inputfield">
+                            <input type="text" pInputText> 
+                            <label>Confirm</label>        
+                        </span>         
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
