--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -2,6 +2,9 @@
     <div class="ui-g-12">
         <div class="card docs"> 
             
+            <h1>Current Version</h1>
+            <p>Angular 5 and PrimeNG 5</p>
+            
             <h1>Getting Started</h1>
             <p>Barcelona is a true native application template for Angular and is distributed as a CLI project. If you don't have CLI installed already run the following commands to set it up. In case
             you have an application that do not use CLI, skip the <a href="#noncli">Integration with an Existing Non CLI Application</a> part.</p>
@@ -448,6 +451,11 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <h1>Migration Guide</h1>
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
+            
+            <p>4.2.0 to 5.0.0</p>
+            <ul>
+                <li>Update theme css files.</li>
+            </ul>
             
             <p>4.1.0 to 4.2.0</p>
             <ul>
