--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -457,6 +457,10 @@ body {
             @include border-radius-left(0);
             @include border-radius-right($borderRadius);
         }
+        
+        .ui-menu {
+            min-width: 100%;
+        }
     }
 
     .ui-fluid {
@@ -1280,32 +1284,52 @@ body {
         }
     }
 
+    /* InputGroup */
     .ui-inputgroup {
         .ui-inputgroup-addon {
+            border-width: 0 0 1px 0;
             border-color: $inputBorderColor;
-            background-color: $inputGroupAddonBgColor;
-            padding: .3em;
+            color: $textSecondaryColor;
+            padding: 2px 2px 1px 2px;
+            align-self: flex-end;
 
-            &:first-child {
-              @include border-radius-left($borderRadius);
-            }
-
-            &:last-child {
-              @include border-radius-right($borderRadius);
-            }
-
-            &.ui-inputgroup-addon-checkbox, &.ui-inputgroup-addon-radiobutton {
-              padding: 0.286em 0.857em;
+            > i {
+                @include flex();
+                align-self: flex-end;
             }
         }
 
-        .ui-button {
-            &:first-child {
-              @include border-radius-left($borderRadius);
-            }
+        .ui-inputtext {
+            align-self: flex-end;
+        }
 
-            &:last-child {
-              @include border-radius-right($borderRadius);
+        .md-inputfield {
+            -webkit-box-flex: 1;
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            width: 1%;
+            display: inherit;
+
+            label {
+                top: 5px;
+            }
+        }
+
+        .ui-chkbox, .ui-radiobutton {
+            margin-bottom: .125em;
+        }
+    }
+    
+    .ui-fluid {
+        .ui-inputgroup {
+            .ui-button-icon-only {
+                width: 1.643em;
+                height: 1.643em;
+                padding: 0;
+
+                .ui-button-icon-left {
+                    margin-left: -.45em;
+                }
             }
         }
     }
