ms support for flex

--- a/src/assets/sass/layout/_utils.scss
+++ b/src/assets/sass/layout/_utils.scss
@@ -176,9 +176,11 @@
 }
 
 .ui-g {
+    -ms-flex-wrap: wrap;
+    
     &.form-group {
         > div {
-            padding: .75em 1em;
+            padding: 1em;
         }
     }
     
