--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -31,7 +31,7 @@
             <img src="assets/layout/images/dashboard/chart-4.svg" />
         </div>
     </div>
-    
+
     <div class="ui-g-12 ui-lg-4">
         <div class="user-card ui-shadow-content">
             <div class="user-card-header">
@@ -40,13 +40,13 @@
             <div class="user-card-content">
                 <img src="assets/layout/images/profile-image.png" />
                 <button pButton id="user-button" type="button" icon="ui-icon-add" (click)="menu.toggle($event)" class="secondary"></button>
-                
+
                 <p-menu #menu popup="popup" [model]="items"></p-menu>
-                
+
                 <div class="user-card-name">
                     <span>Claire White</span>
                 </div>
-                
+
                 <div class="user-detail">
                    <ul>
                      <li class="clearfix">
@@ -72,7 +72,7 @@
                          <i class="material-icons">credit_card</i>
                          <span class="project-title">Payments</span>
                          <span class="project-detail">24 new</span>
-                         
+
                      </li>
                      <li class="clearfix">
                          <div class="project-progressbar">
@@ -80,14 +80,14 @@
                          </div>
                          <i class="material-icons">face</i>
                          <span class="project-title">Clients</span>
-                         <span class="project-detail">+80%</span>                                 
+                         <span class="project-detail">+80%</span>
                      </li>
                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="ui-g-12 ui-lg-8 chat">
         <p-panel header="Chat" styleClass="ui-shadow-content">
             <ul>
@@ -129,7 +129,7 @@
             </div>
         </p-panel>
     </div>
-    
+
     <div class="ui-g-12 activity-feed">
         <p-panel header="ACTIVITY FEED" styleClass="ui-shadow-content">
             <h3>Last Activity</h3>
@@ -154,7 +154,7 @@
             </div>
         </p-panel>
     </div>
-    
+
     <div class="ui-g-12 ui-md-6 ui-lg-4 task-list">
         <p-panel header="Tasks" styleClass="ui-shadow-content">
             <ul>
@@ -229,7 +229,7 @@
             <button type="button" label="Send" icon="ui-icon-send" pButton></button>
         </p-panel>
     </div>
-    
+
     <div class="ui-g-12 ui-lg-4 contacts">
         <p-panel header="Contacts" [style]="{'min-height':'360px'}" styleClass="ui-shadow-content">
             <ul>
@@ -274,7 +274,7 @@
                     <div class="contact-info">
                         <span class="name">Tim Johnson</span>
                         <span class="location">tim@pf-barcelona.com</span>
-                    </div>                                
+                    </div>
                     <div class="contact-actions">
                         <span class="connection-status online">online</span>
                         <i class="fa fa-paper-plane-o"></i>
@@ -296,7 +296,7 @@
             </ul>
         </p-panel>
     </div>
-    
+
     <div class="ui-g-12 ui-md-4">
         <div class="card timeline ui-fluid">
             <div class="ui-g">
@@ -311,7 +311,7 @@
                         <img src="assets/layout/images/dashboard/bridge.png">
                     </div>
                 </div>
-                
+
                 <div class="ui-g-3">
                     <span class="event-time">12h ago</span>
                     <i class="material-icons" style="color:#E91E63">&#xE885;</i>
@@ -320,7 +320,7 @@
                     <span class="event-owner" style="color:#E91E63">Brandon Santos</span>
                     <span class="event-text">Ab nobis, magnam sunt eum. Laudantium, repudiandae, similique!.</span>
                 </div>
-                
+
                 <div class="ui-g-3">
                     <span class="event-time">15h ago</span>
                     <i class="material-icons" style="color:#9c27b0">&#xE0C9;</i>
@@ -329,7 +329,7 @@
                     <span class="event-owner" style="color:#9c27b0">Stephan Ward</span>
                     <span class="event-text">Omnis veniam quibusdam ratione est repellat qui nam quisquam ab mollitia dolores ullam voluptates, similique, dignissimos.</span>
                 </div>
-                
+
                 <div class="ui-g-3">
                     <span class="event-time">2d ago</span>
                     <i class="material-icons" style="color:#ff9800">&#xE0C8;</i>
@@ -341,7 +341,7 @@
                         <img src="assets/layout/images/dashboard/map.png">
                     </div>
                 </div>
-                
+
                 <div class="ui-g-3">
                     <span class="event-time">1w ago</span>
                     <i class="material-icons" style="color:#607d8b">&#xE91B;</i>
@@ -350,7 +350,7 @@
                     <span class="event-owner">Kevin Cox</span>
                     <span class="event-text">Quibusdam ratione est repellat qui nam quisquam veniam quibusdam ratione.</span>
                 </div>
-                
+
                 <div class="ui-g-3">
                     <span class="event-time">2w ago</span>
                     <i class="material-icons" style="color:#FFC107">&#xE23A;</i>
@@ -359,24 +359,37 @@
                     <span class="event-owner" style="color:#FFC107">Walter White</span>
                     <span class="event-text">I am the one who knocks!</span>
                 </div>
-                
+
                 <div class="ui-g-12">
                     <button type="button" label="Refresh" icon="ui-icon-refresh" pButton></button>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="ui-g-12 ui-md-8">
         <div class="card">
-            <p-dataTable [value]="cars" [style]="{'margin-bottom':'20px'}" selectionMode="single" [selection]="selectedCity">
-                <p-header>Recent Sales</p-header>
-                <p-column field="vin" header="Vin" sortable="true"></p-column>
-                <p-column field="year" header="Year" sortable="true"></p-column>
-                <p-column field="brand" header="Brand" sortable="true"></p-column>
-                <p-column field="color" header="Color" sortable="true"></p-column>
-            </p-dataTable>
-            
+          <p-table [columns]="cols" [value]="cars" selectionMode="single" dataKey="vin" [(selection)]="selectedCar" [style]="{'margin-bottom': '20px'}">
+            <ng-template pTemplate="caption">
+              Recent Sales
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+              <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                  {{col.header}}
+                  <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+              <tr [pSelectableRow]="rowData">
+                <td *ngFor="let col of columns">
+                  {{rowData[col.field]}}
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
             <p-panel header="Sales Graph">
                 <div style="overflow:auto">
                     <p-chart type="line" [data]="chartData" responsive="true"></p-chart>
@@ -384,7 +397,7 @@
             </p-panel>
         </div>
     </div>
-    
+
     <div class="ui-g-12 ui-md-8">
         <p-panel header="Calendar" [style]="{'height':'100%'}">
             <p-schedule [events]="events" defaultDate="2016-01-12"></p-schedule>
