--- a/src/assets/sass/theme/_menu.scss
+++ b/src/assets/sass/theme/_menu.scss
@@ -1,7 +1,7 @@
 body {
     .ui-breadcrumb {
         padding: $inputHeaderPadding;
-        
+
         ul {
             li {
                 a {
@@ -11,23 +11,23 @@ body {
             }
         }
     }
-    
+
     .ui-steps {
         position: relative;
-        
+
         .ui-steps-item {
             background-color: transparent;
-            
+
             &.ui-state-disabled {
                 @include opacity(1);
             }
-            
+
             .ui-menuitem-link {
                 display: inline-block;
                 text-align: left;
                 background-color: #ffffff;
                 overflow: hidden;
-                
+
                 .ui-steps-number {
                     display: inline-block;
                     background-color: $grayBgColor;
@@ -41,26 +41,26 @@ body {
                     padding: 0;
                     line-height: 2em;
                 }
-                
+
                 .ui-steps-title {
                     display: inline;
                     margin-left: .625em;
                     color: $textSecondaryColor;
                 }
             }
-            
-            &.ui-state-highlight {                
+
+            &.ui-state-highlight {
                 .ui-steps-number {
                     background-color: $accentColor;
                     color: $accentTextColor;
                 }
-                
-                .ui-steps-title { 
+
+                .ui-steps-title {
                     font-weight: 700;
                     color: $textColor;
                 }
             }
-            
+
             &:last-child {
                 .ui-menuitem-link {
                     display: block;
@@ -78,167 +78,218 @@ body {
             position: absolute;
         }
     }
-    
-    .ui-menu {
-        padding: .5em 0;
-        
-        .ui-shadow, &.ui-shadow {
-            @include overlay-input-shadow();    
-        }
-        
-        .ui-menu-list {
-            padding: 0;
-            margin: 0;
-            
-            li {
-                &.ui-widget-header {
-                    margin: 0 0 1px 0;
-                    @include border-radius(0);
-                    border: 0 none;
-                    width: 100%;
-                    box-sizing: border-box;
-                    padding: .625em 1em;
-                    
-                    h3 {
-                        display: block;
-                        float: none;
-                        font-size: $fontSize;
-                        padding: 0;
-                        font-weight: 400;
-                    }
-                }
-                
-                &.ui-menuitem {
-                    margin: 0;
-                    @include border-radius(0);
-                                        
-                    .ui-menuitem-link {
-                        border: 0 none;
-                        padding: .625em 1em;
-                        width: 100%;
-                        min-height: 2.75em;
-                        box-sizing: border-box;
-                        color: $textColor;
-                        line-height: 1.5em;
-                        @include border-radius(0);
-                        position: relative;
-                        
-                        &:hover {
-                            @include hover-element();
-                        }
-                        
-                        .ui-menuitem-icon {
-                            margin-right: .417em;
-                            display: inline-block;
-                            vertical-align: middle;
-                            float: none;
-                            color: $textSecondaryColor;
-                        }
-                        
-                        .ui-menuitem-text {
-                            display: inline-block;
-                            vertical-align: middle;
-                            float: none;
-                        }
-                    }
 
-                    &.ui-menuitem-active {
-                        > .ui-menuitem-link {
-                            @include hover-element();
-                        }
-                    }
-                }
-            }
-            
-            .ui-separator {
-                height: 1px;
-                background-color: $dividerColor;
-                width: 100%;
-                box-sizing: border-box;
-            }
+    .ui-menu .ui-menuitem-link,
+    .ui-menubar .ui-menuitem-link,
+    .ui-tieredmenu .ui-menuitem-link,
+    .ui-contextmenu .ui-menuitem-link,
+    .ui-megamenu .ui-menuitem-link,
+    .ui-slidemenu .ui-menuitem-link {
+        padding: .625em 1em;
+        color: $textColor;
+        min-height: 2.75em;
+        @include border-radius(0);
+
+        &:hover {
+          @include hover-element();
         }
-        
-        &.ui-menu-toggleable {
-            .ui-menu-list {
-                li {
-                    &.ui-widget-header {
-                        padding-left: 2.250em;
-                        
-                        .fa {
-                            color: #ffffff;
-                            
-                            &.fa-triangle-1-s {
-                                margin-top: -.75em;
-                            }
-                            
-                            &.fa-triangle-1-e {
-                                margin-top: -.75em;
-                            }
-                        }
-                    }
-                }
-            }    
+
+        &:focus {
+          @include hover-element();
         }
-        
-        &.ui-tieredmenu {            
-            .ui-menu-child {
-                padding: .5em 0;
-            }
+        .ui-menuitem-text {
+            vertical-align: middle;
         }
-        
-        &.ui-menubar {
-            padding: 0;
-            
-            .ui-menubar-root-list {
-                > .ui-menuitem {
-                    > .ui-menuitem-link {
-                        .ui-menuitem-icon {
-                            margin-right: 0;
-                        }
-                        
-                        > span {
-                            display: inline-block;
-                            vertical-align: middle;
-                        }
-                    }
-                }
-            }
-            
-            .ui-menu-child {
-                padding: .5em 0;
-            }
-            
-            .ui-menubar-options {
-                padding: .625em 1em;
-            }
-        }
-        
-        &.ui-slidemenu {
-            
-            .ui-menu-parent {
-                .ui-menu-child {
-                    padding: 0;
-                    @include no-shadow();
-                }
-            }
-            
-            .ui-slidemenu-backward {
-                width: 100%;
-                box-sizing: border-box;
-                @include border-radius(0);
+    }
+
+    .ui-menubar,
+    .ui-slidemenu, .ui-tieredmenu {
+        .ui-submenu-list {
+            padding: .5em 0;
+
+            .ui-menuitem {
+              margin: 0;
             }
         }
     }
-    
+
+    .ui-menu {
+        width: 100%;
+        padding: .5em 0;
+
+        .ui-menuitem {
+            margin: 0;
+
+            .ui-menuitem-link {
+              .ui-menuitem-icon {
+                vertical-align: middle;
+              }
+            }
+        }
+
+        &.ui-shadow, .ui-shadow {
+            @include overlay-input-shadow();
+        }
+
+        .ui-submenu-header {
+            border: 0 none;
+            margin: 0;
+            padding: .625em 1em;
+            border-radius: 0;
+        }
+    }
+
+    .ui-menubar {
+        padding: 0;
+
+        .ui-menubar-root-list {
+            &>.ui-menuitem>.ui-menuitem-link {
+              padding: .625em 1em;
+            }
+        }
+
+        .ui-menuitem {
+            .ui-menuitem-link {
+                .ui-menuitem-icon {
+                  vertical-align: middle;
+                }
+
+                .ui-submenu-icon {
+                  vertical-align: middle;
+                }
+            }
+            &.ui-menuitem-active {
+                > .ui-menuitem-link {
+                  @include hover-element;
+
+                  .ui-menuitem-icon {
+                    vertical-align: middle;
+                  }
+                }
+            }
+        }
+    }
+
+    .ui-contextmenu {
+        padding: .5em 0;
+
+        .ui-menuitem {
+
+            .ui-menuitem-link {
+                .ui-menuitem-icon {
+                  vertical-align: middle;
+                }
+            }
+            &.ui-menuitem-active {
+                > .ui-menuitem-link {
+                  @include hover-element;
+                }
+            }
+        }
+    }
+
+    .ui-slidemenu {
+        padding: .5em 0;
+
+        .ui-menuitem {
+            margin: 0;
+
+            .ui-menuitem-link {
+                .ui-menuitem-icon {
+                  vertical-align: middle;
+                }
+            }
+
+            &.ui-menuitem-active {
+                > .ui-menuitem-link {
+                  @include hover-element;
+                }
+            }
+        }
+
+        .ui-slidemenu-backward {
+            margin-bottom: .4em;
+            width: 100%;
+            background-color: $primaryColor;
+            box-sizing: border-box;
+            @include border-radius(0);
+            border: 0 none;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+
+    .ui-tieredmenu {
+        padding: .5em 0;
+
+        .ui-menuitem {
+
+            .ui-menuitem-link {
+                .ui-menuitem-icon {
+                  vertical-align: middle;
+                }
+            }
+            &.ui-menuitem-active {
+                > .ui-menuitem-link {
+                  @include hover-element;
+                }
+            }
+        }
+    }
+
+    .ui-megamenu {
+        padding: 0;
+
+        .ui-megamenu-panel {
+            padding: .5em 0;
+        }
+
+        .ui-megamenu-submenu-header {
+            border-radius: 0;
+            padding: $headerPadding;
+        }
+
+        .ui-submenu-list {
+            padding: 0;
+            border: 0 none;
+
+            .ui-menuitem {
+              margin: 0;
+            }
+        }
+
+        .ui-menuitem {
+            margin: 0;
+
+            .ui-menuitem-link {
+                .ui-menuitem-icon {
+                  vertical-align: middle;
+                }
+
+                .ui-submenu-icon {
+                  vertical-align: middle;
+                }
+            }
+
+            &.ui-menuitem-active {
+                > .ui-menuitem-link {
+                  @include hover-element;
+                }
+            }
+        }
+    }
+
     .ui-tabmenu {
          padding: 0;
-         
+
          .ui-tabmenu-nav {
              padding: 0;
              background-color: #ffffff;
              border: 0 none;
              @include border-radius(0);
-             
+
              > .ui-tabmenuitem {
                top: auto;
                margin: 0 .25em 0 0;
@@ -246,48 +297,48 @@ body {
                border-style: solid;
                border-width: 0 0 2px 0;
                @include transition(border-color .3s);
-               
+
                > a {
                    padding: $headerPadding;
-                   
+
                    &:focus {
                        outline: 0 none;
                    }
-                   
+
                    .ui-menuitem-icon, .ui-menuitem-text {
                        float: none;
                        display: inline-block;
                        vertical-align: middle;
                    }
-                   
+
                    .ui-menuitem-icon {
                        font-weight: 1em;
                        margin-right: .25em;
                    }
                }
-                              
+
                &.ui-state-default {
                    a {
                        color: $textSecondaryColor;
-                       
+
                        .fa {
                            color: $textSecondaryColor;
                        }
                    }
                }
-               
+
                &:not(.ui-state-active):hover {
                    background-color: #ffffff;
                }
-               
+
                &.ui-state-active {
                    background-color: #ffffff;
                    border-color: $accentColor;
                    border-style: solid;
-                   
+
                    a {
                        color: $primaryColor;
-                       
+
                        .fa {
                            color: $primaryColor;
                        }
@@ -296,22 +347,21 @@ body {
            }
         }
     }
-    
+
     .ui-panelmenu {
+
+        span {
+          vertical-align: middle;
+        }
         .ui-panelmenu-header {
             background-color: $primaryColor;
             margin-bottom: 1px;
-            
+
             a {
                 padding: .625em 1em;
                 color: #ffffff;
                 font-size: $fontSize;
             }
-            
-            .fa {
-                color: #ffffff;
-            }
-            
             &.ui-state-active {
                 background-color: $accentColor;
                 @include border-radius-bottom(0);
@@ -320,17 +370,18 @@ body {
                 }
             }
         }
-        
+
         .ui-panelmenu-panel {
             margin-bottom: 1px;
         }
-        
+
         .ui-panelmenu-content {
             padding: 0;
-            
+
             .ui-menuitem {
                 margin: 0;
-                
+                border-radius: 0;
+
                 .ui-menuitem-link {
                     border: 0 none;
                     padding: .625em 1em;;
@@ -341,17 +392,17 @@ body {
                     line-height: 1.5em;
                     @include border-radius(0);
                     position: relative;
-                    
+
                     &:hover {
                         @include hover-element();
                     }
-                                        
+
                     .ui-menuitem-text {
                         display: inline-block;
                         vertical-align: middle;
                         float: none;
                     }
-                    
+
                     .fa {
                         position: static;
                         display: inline-block;
@@ -360,7 +411,7 @@ body {
                 }
             }
         }
-        
+
         .ui-menu-parent .ui-menu-list {
             margin-left: 28px;
         }
@@ -368,7 +419,7 @@ body {
 }
 
 @media (max-width: 640px) {
-    body {        
+    body {
         .ui-steps {
             .ui-steps-item {
                 .ui-menuitem-link {
